# job_parser

./: README.md  pyproject.toml
src/: classes.py  functions.py  main.py  scripts.py
