[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["LLiRRiK <kill2002@mail.ru>"]
readme = "README.md"
packages = [{include = "job_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
